# ai-agent-access-control

./: LICENSE  README.md  pyproject.toml
agent_access/: access.py  action_gate.py  audit.py
tests/: test_access.py  test_action_gate.py  test_audit.py
